__HEADER__([[[Octave-Forge News Archive]]])

<div class="section">
<p>This is an abbreviated list of the changes that were introduced in
various versions of octave-forge. For a full list of changes please
see the <a href="ChangeLog">ChangeLog</a>.</p>
</div>
<div class="section">
<dl>
<dt>January 27, 2007</dt>
<dd>
<p>Octave-forge reorganized as a series of packages for use with
the Octave package manager. See the <a
href="packages.html">packages</a> for more details.
Apart from the changes associated with the conversion to use the
package manager, the following additional changes are notable:</p>
<ul>
   <li>odepkg: A new matlab compatible package for ODE that replaces
   the existing extra/ode package</li>
   <li>info-theory: A new package of information theory functions</li>
   <li>zenity: A new package for creating simple graphical
   user interfaces.</li>
   <li>xraylib: A new package for bindings to the gnu xray library.</li>
   <li>optiminterp: A new package for optimal interpolation.</li>
   <li>linear-algebra: New function bicg</li>
   <li>spline: Allow NDArrays in csape and make it compatible</li>
   <li>comm: New functions fibodeco, fibodeco, fiboenco, fibosplitstream,
   golombdeco, golombenco, huffmandeco, huffmandict, huffmandict,
   huffmanenco, ricedeco, riceenco, rledeco, rleenco, shannonfanodeco,
   shannonfanodict and shannonfanoenco</li>
   <li>econometrics: New functions __kernel_epanechnikov,
   __kernel_normal, kernel_density, kernel_density_cvscore,
   kernel_density_nodes, kernel_example, kernel_optimal_bandwidth, 
   kernel_regression, kernel_regression_cvscore.m and
   kernel_regression_nodes</li>
   <li>specfun: New functions dirac, erfcinv, erfcx, expint_E1, 
   expint_Ei, expint, heaviside, psi, Si, sinint and zeta</li>
   <li>statistics: New functions betastat, binostat, chi2stat,
   expstat, fstat, gamfit, gamlike, gamstat, geostat, hygestat,
   juscdf,  juspdf, lognstat, normstat, pascal_stat, poisstat,